# glesgae-examples

./: README.md
ApplicationLifecycleTest/: .directory  AndroidManifest.xml  CMakeLists.txt  MVPUniformUpdater.cpp  MVPUniformUpdater.h  Makefile.linux  TestLifecycle.cpp  TestLifecycle.h  Texture0UniformUpdater.cpp  Texture0UniformUpdater.h  main.c  main.cpp  test.json  test.tmx
ApplicationLifecycleTest/jni/: Android.mk  Application.mk
ApplicationLifecycleTest/res/values/: strings.xml
ApplicationLifecycleTest/src/uk/co/arcadebadgers/androidexample/: MainActivity.java
AudioTest/: CMakeLists.txt  main.c
BufferTest/: CMakeLists.txt  main.c
